# stelax

./: .gitignore  CLAUDE.md  LICENSE  README.md  bootstrap.sh  stelax.md
.github/ISSUE_TEMPLATE/: config.yml  decision.yml  incident.yml  proposal.yml  retro.yml  task.yml
.github/PULL_REQUEST_TEMPLATE/: feature.md  infra.md
.github/workflows/: 01-parse-issue-form.yml  04-export-memory.yml  05-e2e-smoke.yml  06-weekly-summary.yml  07-build-search-index.yml  08-audit-trail.yml
apps/exporter/: pyproject.toml
apps/exporter/exporter/: audit_trail.py  build_index.py  export_memory.py  generate_summary.py  normalize_issue.py  sync_to_veritas.py  triage_issue.py
apps/exporter/exporter/templates/: audit_trail.j2  decision_summary.j2  incident_report.j2  proposal_summary.j2  retro_summary.j2  weekly_summary.j2
apps/exporter/tests/: test_audit_trail.py  test_build_index.py  test_export_memory.py  test_generate_summary.py  test_new_intake_types.py  test_normalize_issue.py  test_routing.py  test_triage_issue.py  test_triage_policy.py
configs/: multi-repo-intake.example.json  triage-policy.example.json
configs/nanoclaw/: README.md  docker-compose.yml  routing.example.json
configs/nanoclaw/channels/: engineering.json  (+3 more)
configs/veritas/: README.md  docker-compose.yml
docs/: acceptance-tests.md  architecture.md  multi-repo-intake.md
schemas/canonical/: memory-artifact.schema.json  normalized-issue.schema.json
schemas/issue/: incident.schema.json  proposal.schema.json  retro.schema.json
stelax/: CONTRIBUTING.md  README.md
stelax/docs/: threat-model.md
(+19 files in other folders)
