[project]
name = "stelax-exporter"
version = "0.1.0"
description = "STELAX memory exporter service"
authors = [
    {name = "STELAX Orchestrator"}
]
dependencies = [
    "requests",
    "jinja2",
    "pydantic"
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
